# report_forge

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
src/: api.rs  main.rs  utils.rs
src/api/: file.rs  report.rs
src/utils/: common_struct.rs  html_parser.rs  setting.rs
templates/: mytemplate.html  test.html
